# DBF

./: .gitignore  CMakeLists.txt  Main.glade  converter.hpp  main.cpp
headers/: converter.hpp  dbf.hpp  view.hpp
src/: converter.cpp  dbf.cpp  view.cpp
style/: general.css
